[metadata]
name = SAMRI
version = 0.5.2dev
author = Horea Christian
author_email = chr@chymera.eu
description = Small animal magnetic resonance imaging via Python.
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = GPL-3
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering :: Information Analysis
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8
install_requires =
	argh
	matplotlib
	nibabel
	nipy
	nipype
	numpy
	pandas
	scipy
	scikit-learn
packages = find:
include_package_data = false
zip_safe = false

[options.entry_points]
console_scripts =
	SAMRI=samri.cli:main

[build-system]
requires = ["setuptools"]
#build-backend = 'setuptools.build_meta'
